Adding css types on nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,8 +2,17 @@ events {}
 
 http {
     types {
+        text/css                             css;
+        application/font-woff               woff;
+        application/font-woff2              woff2;
+        application/x-font-ttf              ttf;
+        application/vnd.ms-fontobject       eot;
+        application/font-sfnt               otf;
+        font/opentype                       otf;
+        font/ttf                            ttf;
+        font/woff                           woff;
+        font/woff2                          woff2;
         application/javascript js;
-        application/ecmascript js;
         text/html html;
     }
   server {
