Update configuration for svg files

--- a/nginx.conf
+++ b/nginx.conf
@@ -14,6 +14,7 @@ http {
         font/woff2                          woff2;
         application/javascript js;
         text/html html;
+        image/svg+xml                       svg;
     }
   server {
     listen 4200;
